// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchResult /> SearchResult generates a label prefix when supplied 1`] = `null`;

exports[`<SearchResult /> SearchResult matches snapshot 1`] = `
<SearchResult
  containerDetail="jurassic period"
  href="www.atlassian.com"
  icon={
    <div>
      Icon
    </div>
  }
  timeDetail={
    <div>
      last updated 145m years ago
    </div>
  }
  title="dinosaurs"
>
  <div
    role="none"
  >
    <ResultLink
      href="www.atlassian.com"
      isKeyboardHighlighted={false}
    >
      div
    </ResultLink>
  </div>
</SearchResult>
`;

exports[`<SearchResult /> SearchResult matches snapshot when highlighted 1`] = `
<SearchResult
  containerDetail="jurassic period"
  href="www.atlassian.com"
  icon={
    <div>
      Icon
    </div>
  }
  timeDetail={
    <div>
      last updated 145m years ago
    </div>
  }
  title="dinosaurs"
>
  <div
    role="none"
  >
    <ResultLink
      href="www.atlassian.com"
      isKeyboardHighlighted={true}
    >
      div
    </ResultLink>
  </div>
</SearchResult>
`;

exports[`<SearchResult /> SearchResult matches snapshot with custom component 1`] = `
<SearchResult
  containerDetail="jurassic period"
  href="www.atlassian.com"
  icon={
    <div>
      Icon
    </div>
  }
  linkComponent={[Function]}
  timeDetail={
    <div>
      last updated 145m years ago
    </div>
  }
  title="dinosaurs"
>
  <div
    role="none"
  >
    <ResultLink
      href="www.atlassian.com"
      isKeyboardHighlighted={false}
      linkComponent={[Function]}
    >
      div
    </ResultLink>
  </div>
</SearchResult>
`;
